fix spacing in waybar

--- a/waybar/.config/waybar/style-light.css
+++ b/waybar/.config/waybar/style-light.css
@@ -1,40 +1,40 @@
 @import "./rose-pine-dawn.css";
 
 * {
-    border: none;
-    font-family: "Maple Mono NF";
-    font-size: 10px;
+  border: none;
+  font-family: "Maple Mono NF";
+  font-size: 10px;
 }
 window#waybar {
-    background: @overlay;
-    border-radius: 5px;
+  background: @overlay;
+  border-radius: 5px;
 }
 /*-----module groups----*/
 .modules-right {
-    margin: 5px 10px 5px 0px;
+  margin: 5px 10px 5px 0px;
 }
 .modules-center {
-    margin: 5px;
+  margin: 5px;
 }
 .modules-left {
-    margin: 5px 0px 5px 10px;
+  margin: 5px 0px 5px 10px;
 }
 /*-----modules indv----*/
 #workspaces {
-    background-color: @base;
-    border-radius: 5px;
+  background-color: @base;
+  border-radius: 5px;
 }
 #workspaces button {
-    padding: 0px 5px;
-    color: @subtle;
+  padding: 0px 5px;
+  color: @subtle;
 }
 #workspaces button:hover {
-    box-shadow: inherit;
+  box-shadow: inherit;
 }
 
 #workspaces button.active {
-    font-weight: bold;
-    color: @text;
+  font-weight: bold;
+  color: @text;
 }
 
 #pulseaudio,
@@ -47,76 +47,77 @@ window#waybar {
 #temperature,
 #network,
 #tray {
-    padding: 0px 8px;
-    color: @subtle;
+  padding: 0px 8px;
+  color: @subtle;
 }
 #clock.time {
-    color: @foam;
-    background-color: @base;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    margin-right: -5px;
+  color: @foam;
+  background-color: @base;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  margin-right: -5px;
 }
 #clock.date {
-    color: @foam;
-    background-color: @base;
-    margin-left: -5px;
+  color: @foam;
+  background-color: @base;
+  margin-left: -5px;
 }
 #custom-weather {
-    color: @text;
-    background-color: @base;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    margin-left: -2px;
-    margin-right: 5px;
+  color: @text;
+  background-color: @base;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-left: -2px;
+  margin-right: 5px;
 }
 #temperature {
-    color: @text;
+  color: @text;
 }
 #custom-media {
-    color: @foam;
-    background-color: transparent;
+  color: @foam;
+  background-color: transparent;
 }
 #custom-theme {
-    color: @pine;
-    background-color: @base;
-    border-radius: 5px;
-    padding-right: 10px;
+  color: @pine;
+  background-color: @base;
+  border-radius: 5px;
+  padding-right: 10px;
+  padding-right: 5px;
 }
 #network {
-    color: @love;
-    background-color: @base;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+  color: @love;
+  background-color: @base;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 #temperature {
-    color: @gold;
-    background-color: @base;
-    margin-left: -2px;
+  color: @gold;
+  background-color: @base;
+  margin-left: -2px;
 }
 #cpu {
-    color: @foam;
-    background-color: @base;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    margin-right: 5px;
+  color: @foam;
+  background-color: @base;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-right: 5px;
 }
 #pulseaudio {
-    color: @text;
-    background-color: @base;
-    border-radius: 5px;
+  color: @text;
+  background-color: @base;
+  border-radius: 5px;
 }
 #tray {
-    background-color: @base;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    margin-left: 5px;
+  background-color: @base;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  margin-left: 5px;
 }
 #custom-notification {
-    color: @text;
-    background-color: @base;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    padding: 0px 8px;
-    margin-left: -2px;
+  color: @text;
+  background-color: @base;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding: 0px 8px;
+  margin-left: -2px;
 }
